# Jazyk

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  jazyk.toml
.github/workflows/: ci.yml  site.yml
bootstrap/site/: index.html
bootstrap2/: .gitignore  Cargo.toml  README.md  VALIDATION.md
bootstrap2/editors/vscode/: README.md  package-lock.json  package.json
bootstrap2/editors/vscode/src/: extension.ts
bootstrap2/example/f1/: jazyk.toml
bootstrap2/example/f2/: EXPECTED.md  jazyk.toml
bootstrap2/example/f2/docs/: admin.md  catalog.md  customer.md  glossary.md  inventory.md  orders.md  payment.md  returns.md  roadmap.md  shipping.md  system.md
bootstrap2/example/f2/product/: Cargo.toml
bootstrap2/example/f2/product/src/: admin_cli.rs  catalog.rs  customer.rs  gift_wrapping.rs  lib.rs  mobile_app.rs  order.rs  payment.rs  product.rs  returns.rs  shipment.rs  stock.rs  subscriptions.rs
bootstrap2/example/f2/product/tests/: admin_cli.rs  catalog.rs  customer.rs  gift_wrapping.rs  mobile_app.rs  order.rs  payment.rs  product.rs  returns.rs  shipment.rs  stock.rs  subscriptions.rs
bootstrap2/src/: benchmark.rs  cli.rs  context.rs  docsgen.rs  gen.rs  jsonrpc.rs  llm.rs  lsp.rs  main.rs  mcp.rs  md.rs  model.rs  parallel.rs  project.rs  reconcile.rs  store.rs  tools.rs  turn.rs  verify.rs  viewer.rs
docs/: TODO.md  codegen.md  compiler.md  main.md  mcp.md  pm.md  testgen.md
docs/TODO/: 002-turn-based-compilation.md
docs/compiler/: artifacts.md  build-artifacts.md  compilation.md  (+3 more)
docs2/: TODO.md  jazyk.toml  main.md  site.md
example-erp/: jazyk.toml
(+60 files in other folders)
