[package]
name = "jazyk"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "jazyk"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
# Infrastructure comes from crates; only domain logic is hand-rolled (owner decision).
ureq = "2"
notify = "6"
regex = "1.12.4"
